# clean-web-app-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  clean  commands.py  config-dev.ini  config-test.ini  docker-compose.yaml  manage  manage.yml  mypy.ini  prun  prun-test  pyproject.toml  runtest  watch-test
infra/: main.tf
migrations/: env.py
migrations/versions/: 5cacbc8d939c_create_blog.py  7de037f185ea_create_user_table.py  965e8d105dc7_make_the_username_unique.py
src/: config.py  database.py  db_tables.py  kafka_job.py  main.py
src/blog/: db_tables.py  http_endpoints.py
src/chat/: http_endpoints.py
src/create_job/: http_endpoints.py
src/file_management/: http_endpoints.py
src/kafka_schema/: job-topic-schema.json
src/static/: chat.html
src/user/: functionality.py  http_endpoints.py
src/users/: db_tables.py  functionality.py  http_endpoints.py
test/data/: seed_data.py  some-file.txt
test/integration/: conftest.py  test_create_blog.py  test_file_upload.py  test_users.py
test/unit/: simple_test.py
