[tool.poetry]
name = "fast-python-microservice"
version = "0.1.0"
description = ""
authors = ["Tanay PrabhuDesai <tanayseven@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
SQLAlchemy = "^1.4.22"
psycopg2-binary = "^2.9.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
boto3 = "^1.18.16"
python-multipart = "^0.0.5"
confluent-kafka = {extras = ["avro"], version = "^1.7.0"}
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
alembic = "^1.6.5"
black = "^21.7b0"
mypy = "^0.910"
requests = "^2.26.0"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
pytest-sugar = "^0.9.4"
sqlalchemy-stubs = "^0.4"
manage = "^0.1.15"
click = "^8.0.1"
types-boto3 = "^1.0.1"
moto = "^2.2.1"
pytest-docker-compose = "^3.2.1"
types-requests = "^2.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
